--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="container">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <a class="navbar-brand" href="#">
-                <img src="images/logo.png" alt="" />
+                <img src="logo.png" alt="" />
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -48,7 +48,7 @@
                             <button class="buy-now-button">By Now</button>
                         </div>
                         <div class="col-md-5">
-                            <img src="images/banner-images/tv.png" class="d-block w-100" alt="..." />
+                            <img src="tv.png" class="d-block w-100" alt="..." />
                         </div>
                     </div>
                 </div>
@@ -64,7 +64,7 @@
                         </div>
 
                         <div class="col-md-5">
-                            <img src="images/banner-images/headphone.png" class="d-block w-100" alt="..." />
+                            <img src="headphone.png" class="d-block w-100" alt="..." />
                         </div>
                     </div>
                 </div>
@@ -80,7 +80,7 @@
                         </div>
 
                         <div class="col-md-5">
-                            <img src="images/banner-images/xbox.png" class="d-block w-100" alt="..." />
+                            <img src="xbox.png" class="d-block w-100" alt="..." />
                         </div>
                     </div>
                 </div>
@@ -100,19 +100,19 @@
                 <div class="col-md-4">
                     <div class="cat1 d-flex justify-content-between align-items-center">
                         <h1>Watch</h1>
-                        <img src="images/categories/watch.png" alt="" />
+                        <img src="watch.png" alt="" />
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="cat2 d-flex justify-content-between align-items-center">
                         <h1>Bag</h1>
-                        <img src="images/categories/bag.png" alt="" />
+                        <img src="bag.png" alt="" />
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="cat3 d-flex justify-content-between align-items-center">
                         <h1>Shoes</h1>
-                        <img src="images/categories/shoes.png" alt="" />
+                        <img src="shoes.png" alt="" />
                     </div>
                 </div>
             </div>
@@ -123,7 +123,7 @@
 
             <div class="card-deck">
                 <div class="card">
-                    <img src="images/shoes/shoe-1.png" class="card-img-top" alt="..." />
+                    <img src="shoe-1.png" class="card-img-top" alt="..." />
                     <div class="card-body">
                         <h5 class="card-title">Supply 350</h5>
                         <p class="card-text">
@@ -134,7 +134,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img src="images/shoes/shoe-2.png" class="card-img-top" alt="..." />
+                    <img src="shoe-2.png" class="card-img-top" alt="..." />
                     <div class="card-body">
                         <h5 class="card-title">Nike 360</h5>
                         <p class="card-text">
@@ -145,7 +145,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img src="images/shoes/shoe-3.png" class="card-img-top" alt="..." />
+                    <img src="shoe-3.png" class="card-img-top" alt="..." />
                     <div class="card-body">
                         <h5 class="card-title">Red Airmax</h5>
                         <p class="card-text">
@@ -162,7 +162,7 @@
             <h2>Backpack</h2>
             <div class="card-deck">
                 <div class="card">
-                    <img src="images/bags/bag-1.png" class="card-img-top" alt="..." />
+                    <img src="bag-1.png" class="card-img-top" alt="..." />
                     <div class="card-body">
                         <h5 class="card-title">Red Laltu Bag</h5>
                         <p class="card-text">
@@ -175,7 +175,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img src="images/bags/bag-2.png" class="card-img-top" alt="..." />
+                    <img src="bag-2.png" class="card-img-top" alt="..." />
                     <div class="card-body">
                         <h5 class="card-title">Blue Niltu Bag</h5>
                         <p class="card-text">
@@ -188,7 +188,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img src="images/bags/bag-3.png" class="card-img-top" alt="..." />
+                    <img src="bag-3.png" class="card-img-top" alt="..." />
                     <div class="card-body">
                         <h5 class="card-title">Black Kaltu Bag</h5>
                         <p class="card-text">
